data/derived/sp14/progs/unify/prog3009.ml.out
Characters 87-88:
  | (h :: t) -> h :: appendLists t;;
                                 ^
Error: This expression has type 'a list
       but an expression was expected of type 'a list * 'a list
